syntax = "proto3";

package com.metrocarpool.events;

//// Optionally define the Java package
//option java_package = "com.metrocarpool.events";
//option java_multiple_files = true;

// The Kafka event definition
message DriverRideCompletionEvent {
  int64 driverId = 1;
}
